--- a/code source/src/app/headeradmin/headeradmin.component.html
+++ b/code source/src/app/headeradmin/headeradmin.component.html
@@ -5,10 +5,9 @@
             <h6>Start your enterneurship journey</h6>
         </div>
         <div class="col-md-5 text-center" id="nav">
-      <!--      <app-navbar></app-navbar>-->
         </div>
         <div class="col-md-2 align-items text-center" id="profile-name">
-            <h6 >Admin A</h6>
+            <h6 >{{userj.name}}</h6>
         </div>
         <div class="col-md-1   text-center ">
 
