--- a/code source/src/app/login-form/login-form.component.html
+++ b/code source/src/app/login-form/login-form.component.html
@@ -1,5 +1,6 @@
-<app-headerlanding></app-headerlanding>
+
 <body>
+    <app-headerlanding></app-headerlanding>
     <div class="container">
 
     <div class="col offset-2">
@@ -19,7 +20,7 @@
                 <a href=""><p style="color: rgb(227, 109, 54); margin-left: 70%; margin-top: 10px;">Forgot password ?</p></a>
                     <div class="col-sm-9 col-lg-8 offset-2">
                         
-                        <button type="submit" [disabled]="loginForm.invalid" class="btn " (click)="onSubmit" style="margin-top: 30px; width:100%; background: #f17928 ;color:white">login</button>
+                        <button type="submit"  class="btn " (click)="onSubmit" style="margin-top: 30px; width:100%; background: #f17928 ;color:white">login</button>
                 </div>
             
                 <div style="margin-left: 40%; margin-top: 50px;">
