--- a/code source/src/app/navbarnews/navbarnews.component.html
+++ b/code source/src/app/navbarnews/navbarnews.component.html
@@ -10,7 +10,7 @@
             </svg>
             home</a>
           </button>
-          <a routerLink='/about-us2'><button type="button" class="btn btn2" id="button2">About Us</button></a>
+          <a routerLink='/about-us'><button type="button" class="btn btn2" id="button2">About Us</button></a>
           <button type="button" class="btn btn2" id="button3" routerLink='/contactus2'>Contact Us</button>
         <form class="ms-3" >
           <div class="input-group">
