--- a/code source/src/app/adminfirstpannel/adminfirstpannel.component.html
+++ b/code source/src/app/adminfirstpannel/adminfirstpannel.component.html
@@ -7,9 +7,11 @@
             <app-reported></app-reported>
         </div>
         
-        <div class="col-lg-5 ">
-
-            <app-post-reported></app-post-reported></div>
+            <div class="col-lg-5 ">
+                <ng-container *ngFor="let post of tab">
+                    <app-reportedpostmanage  [post]="post"></app-reportedpostmanage>
+                </ng-container>
+            </div>
         </div>
 
 
