--- a/code source/src/app/form-person/form-person.component.html
+++ b/code source/src/app/form-person/form-person.component.html
@@ -18,24 +18,24 @@
         <div class="row">
             <div class="col-md-5 col-lg-4 offset-lg-1">
                 <label for="fname" style="color: rgb(255, 255, 255);">First name :</label>
-                <input required style=" width: 400px; margin-bottom: 35px;" type="text" class="form-control" id="fname" style="background:#ffffff;" formControlName="fname">
+                <input required style=" width: 400px; margin-bottom: 35px;" type="text" class="form-control" id="fname" style="background:#ffffff;" formControlName="firstName">
             </div>
 
             <div class="col-md-5  col-lg-4 offset-md-2 offset-lg-1">
                 <label for="lname" style="color: rgb(255, 255, 255);">Last name:</label>
-                <input required style=" width: 400px; margin-bottom: 35px;" type="text" class="form-control" id="lname" style="background:#ffffff;" formControlName="lname">
+                <input required style=" width: 400px; margin-bottom: 35px;" type="text" class="form-control" id="lname" style="background:#ffffff;" formControlName="lastName">
             </div>
             
         </div>
         <div class="row">
             <div class="col-md-5 col-lg-4 offset-lg-1">
                 <label for="pswd" style="color: rgb(255, 255, 255);">Password:</label>
-                <input required style=" width: 400px; margin-bottom: 0px;" type="password" class="form-control" id="pswd" style="background:#ffffff;" pattern=".{5,}" formControlName="pswd">
+                <input required style=" width: 400px; margin-bottom: 0px;" type="password" class="form-control" id="pswd" style="background:#ffffff;" pattern=".{5,}" formControlName="password">
                 <div class="invalid-feedback" style=" margin-bottom: 32px;">Enter at least 5 caracteres</div>
             </div>
             <div class="col-md-5  col-lg-4 offset-md-2 offset-lg-1">
                 <label for="confirmpsw" style="color: rgb(255, 255, 255);">Confirm Password :</label>
-                <input required style=" width: 400px; margin-bottom: 35px;" type="password"  pattern=".{5,}" class="form-control" id="confirmpsw" style="background:#ffffff;" formControlName="confirmpsw">
+                <input required style=" width: 400px; margin-bottom: 35px;" type="password"  pattern=".{5,}" class="form-control" id="confirmpsw" style="background:#ffffff;" formControlName="confirmPassword">
             </div>
             
         </div>
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-md-5 col-lg-4 offset-lg-1">
                 <label for="yearExp" style="color: rgb(255, 255, 255);">Year of experience :</label>
-                <select required style=" width: 400px; margin-bottom: 35px;"  class="form-select" formControlName="yearExp"  id="yearExp" style="background:#ffffff;">
+                <select required style=" width: 400px; margin-bottom: 35px;"  class="form-select" formControlName="yearOfExperience"  id="yearExp" style="background:#ffffff;">
                     <option disabled selected value=""> </option>
                     <option>-5 years of experience</option>
                 <option>5-10 years of experience</option>
@@ -52,7 +52,7 @@
             </div> 
             <div class="col-md-5  col-lg-4 offset-md-2 offset-lg-1">
                 <label for="birth" style="color: rgb(255, 255, 255);">Date of Birth:</label>
-                <input  required style=" width: 400px; margin-bottom: 35px;" type="date" class="form-control" id="birth" formControlName="birth" style="background:#ffffff;">
+                <input  required style=" width: 400px; margin-bottom: 35px;" type="date" class="form-control" id="birth" formControlName="dateOfBirth" style="background:#ffffff;">
             </div>
         </div>
 
@@ -81,17 +81,17 @@
             <div class="col-md-5 col-lg-4 offset-lg-1">
                 <p id="gender" style="color: rgb(255, 255, 255);">Gender:</p>
                 <div class="form-check form-check-inline">
-                    <input  required type="radio" class="form-check-input" id="male" formControlName="gender" style="margin-bottom: 30px;" value="male">
+                    <input  required type="radio" class="form-check-input" id="male" formControlName="gender" style="margin-bottom: 30px;" value="h">
                     <label class="form-check-label" for="male" style="color: #ffffff;">Male</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input required type="radio" class="form-check-input" id="female" formControlName="gender"  value="female">
+                    <input required type="radio" class="form-check-input" id="female" formControlName="gender"  value="f">
                     <label class="form-check-label" for="female" style="color: #ffffff;">Female</label>
                 </div>
             </div>
             <div class="col-md-5  col-lg-4 offset-md-2 offset-lg-1">
                 <label for="job" style="color: rgb(255, 255, 255);">Job Position:</label>
-                <input required style=" width: 400px;" type="text" class="form-control" id="job" formControlName="job" style="background:#ffffff;">
+                <input required style=" width: 400px;" type="text" class="form-control" id="job" formControlName="jobPosition" style="background:#ffffff;">
             </div>
         </div>
     
@@ -103,7 +103,7 @@
             </div>
         </div>
 
-        <button type="click" id="done" class="btn" ><a routerLink='/newsfeed'>Done</a></button>
+        <button type="submit" id="done" class="btn" ><a routerLink='/newsfeed'>Done</a></button>
     </div>
 
     </form>
