--- a/code source/src/app/login-form/login-form.component.html
+++ b/code source/src/app/login-form/login-form.component.html
@@ -26,10 +26,7 @@
                     <p style="color: rgb(209, 209, 209); display: inline;">No account ?</p>
                     <a routerLink='/signin' id="signUp"><p style="color: rgb(227, 109, 54); margin-left: 3px; margin-top: 10px; display: inline;">Sign Up</p></a>
                 </div>
-                </form> </div>
-
-
-
-                
-                
+                </form>
+             </div> 
+             </div>
 </body>
