--- a/code source/src/app/form-startup/form-startup.component.html
+++ b/code source/src/app/form-startup/form-startup.component.html
@@ -1,29 +1,28 @@
-
+<app-headerlanding></app-headerlanding>
 <body>
-    <app-headerlanding></app-headerlanding>
     <div class="container">
     
-        <form class="form was-validated">
+        <form class="form was-validated" [formGroup]="signUpFormS" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-md-5 col-lg-4 offset-lg-1">
                     <label for="fname" style="color: rgb(255, 255, 255);"> Name of start-up:</label>
-                    <input required style="  margin-bottom: 35px;" type="text" class="form-control" id="fname" style="background:#ffffff;" name="fname">
+                    <input required style="  margin-bottom: 35px;" type="text" class="form-control" id="fname" style="background:#ffffff;" formControlName="name">
                     </div>
                 
                 <div class="col-md-5  col-lg-4 offset-md-2 offset-lg-1">
                     <label for="phone" style="color: rgb(255, 255, 255);">Phone Number:</label>
-                    <input  required style=" width: 400px; margin-bottom: 35px;" type="tel"  pattern="[0-9]{8}" class="form-control" id="phone" style="background:#ffffff;" name="phone">
+                    <input  required style=" width: 400px; margin-bottom: 35px;" type="tel"  pattern="[0-9]{8}" class="form-control" id="phone" style="background:#ffffff;" formControlName="phone">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-5 col-lg-4 offset-lg-1">
                     <label for="pswd" style="color: rgb(255, 255, 255);">Password:</label>
-                    <input required style=" width: 400px; margin-bottom: 0px;" type="password" class="form-control" id="pswd" style="background:#ffffff;" pattern=".{5,}" name="pswd" >
+                    <input required style=" width: 400px; margin-bottom: 0px;" type="password" class="form-control" id="pswd" style="background:#ffffff;" pattern=".{5,}" formControlName="password" >
                     <div class="invalid-feedback" style=" margin-bottom: 15px;">Enter at least 5 caracteres</div>
                 </div>
                 <div class="col-md-5 col-lg-4  offset-md-2 offset-lg-1">
                     <label for="confirmpsw" style="color: rgb(255, 255, 255);">Confirm Password :</label>
-                    <input required style=" width: 400px; margin-bottom: 15px;" type="password"  pattern=".{5,}" class="form-control" id="confirmpsw" style="background:#ffffff;" name="confirmpsw">
+                    <input required style=" width: 400px; margin-bottom: 15px;" type="password"  pattern=".{5,}" class="form-control" id="confirmpsw" style="background:#ffffff;" formControlName="confirmPassword">
                 </div>
                 
             </div>
@@ -31,24 +30,24 @@
             <div class="row">
                 <div class="col-md-5 col-lg-4 offset-lg-1">
                     <label for="email" style="color: rgb(255, 255, 255); ">Email:</label>
-                    <input required style=" width: 400px; margin-bottom: 35px; " type="email" class="form-control" id="email" style="background:#ffffff;" name="email">
+                    <input required style=" width: 400px; margin-bottom: 35px; " type="email" class="form-control" id="email" style="background:#ffffff;" formControlName="email">
                 </div>
                 <div class="col-md-5 col-lg-4  offset-md-2 offset-lg-1">
                     <label for="date" style="color: rgb(255, 255, 255);">Date of Creation:</label>
-                        <input  required style=" width: 400px; margin-bottom: 35px;" type="date" class="form-control" id="date" style="background:#ffffff;" name="date">
+                        <input  required style=" width: 400px; margin-bottom: 35px;" type="date" class="form-control" id="date" style="background:#ffffff;" formControlName="date">
                     </div>
                 </div>
                 
                 <div class="row">
                     <div class="col-md-5 col-lg-4 offset-lg-1">
                         <label for="address" style="color: rgb(255, 255, 255);">Address:</label>
-                        <input  required style=" width: 400px; margin-bottom: 35px;" type="text" class="form-control" id="address" style="background:#ffffff;" name="address">
+                        <input  required style=" width: 400px; margin-bottom: 35px;" type="text" class="form-control" id="address" style="background:#ffffff;" formControlName="address">
                     </div>
     
     
                     <div class="col-md-5 col-lg-4  offset-md-2 offset-lg-1">
                         <label for="field" style="color: rgb(255, 255, 255);">Field:</label>
-                    <input  required style=" width: 400px; margin-bottom: 35px; " type="text" class="form-control" id="field" style="background:#ffffff;" name="field">
+                    <input  required style=" width: 400px; margin-bottom: 35px; " type="text" class="form-control" id="field" style="background:#ffffff;" formControlName="field">
                 </div>
                 
                 
@@ -56,7 +55,7 @@
             <div class="row"> 
                 <div class="col-md-5 col-lg-4 offset-lg-1">
                 <label for="bio" style="color: rgb(255, 255, 255);">Bio :</label>
-                <textarea  style=" width: 400px; margin-bottom: 35px; " type="text" class="form-control" id="bio" style="background:#ffffff;" name="bio"></textarea>
+                <textarea  style=" width: 400px; margin-bottom: 35px; " type="text" class="form-control" id="bio" style="background:#ffffff;" formControlName="bio"></textarea>
             </div></div>
     
             <div class="row" style="margin-top: 70px;">
