--- a/code source/src/app/header/header.component.html
+++ b/code source/src/app/header/header.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="col-md-1   text-center ">
             <a routerLink='/profile'>
-                <img src="data:image/jpeg;base64,{{user.ppic}}" height="75" width="81" id="pdp" class="rounded-circle" >
+                <img src="data:image/jpeg;base64,{{user.ppic}}" height="75" width="81" id="pdp" alt="pdp" class="rounded-circle" >
             </a>
         </div>
     </div>
