--- a/code source/src/app/headeradmin/headeradmin.component.html
+++ b/code source/src/app/headeradmin/headeradmin.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="col-md-1   text-center ">
 
-                <img src="../../assets/admin.png" height="75" width="81" id="pdp" class="rounded-circle" >
+                <img src="../../assets/admin.png" height="75" width="81" id="pdp" alt="pdp" class="rounded-circle" >
 
         </div>
     </div>
