--- a/code source/src/app/landingpage/landingpage.component.html
+++ b/code source/src/app/landingpage/landingpage.component.html
@@ -73,7 +73,7 @@ Individuals that are engaged in this process are :
         </div>    
 
         <div class="col">
-            <img src="../../assets/rajel.png" class="float-end" ></div>
+            <img src="../../assets/rajel.png" alt="bg" class="float-end" ></div>
         </div>
      </div>
      
