--- a/code source/src/app/newsfeed/newsfeed.component.html
+++ b/code source/src/app/newsfeed/newsfeed.component.html
@@ -13,7 +13,7 @@
         <app-create-post></app-create-post><br>
         <div></div>
         <ng-container *ngFor="let post of tab">
-            <app-postmanage [post]="post"></app-postmanage>
+            <app-beta [post]="post"></app-beta>
           </ng-container>
           
         
