--- a/code source/src/app/postmanage/postmanage.component.html
+++ b/code source/src/app/postmanage/postmanage.component.html
@@ -22,9 +22,9 @@
         </div>
 
         <div class="flexy-2">
-               <a routerLink="/updatepost"><button type="button" class="btn btn-success">update</button></a>
-                <button type="button"  class="btn btn-danger">delete</button>
-        </div>
+            <a [routerLink]="['/updatepost',post.idpost]"><button type="button" class="btn btn-success" >update</button></a>
+             <button type="button"  class="btn btn-danger">delete</button>
+     </div>
          
        
        
