--- a/code source/src/app/profil/profil.component.html
+++ b/code source/src/app/profil/profil.component.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
     <div class="row d-flex align-items-center"id="d2">
         <div class="offset-md-5 col-md-2 text-center"id="pdp2">
-            <img src="data:image/jpeg;base64,{{user.ppic}}" style="box-shadow:rgb(71, 90, 106) 3px 3px 6px 0px;" height="75" width="81"  class="rounded-circle" >
+            <img alt="userPic" src="data:image/jpeg;base64,{{user.ppic}}" style="box-shadow:rgb(71, 90, 106) 3px 3px 6px 0px;" height="75" width="81"  class="rounded-circle" >
         </div>
     </div>
     <div class="row d-flex align-items-center" id="name">
