--- a/code source/src/app/reportedpostmanage/reportedpostmanage.component.html
+++ b/code source/src/app/reportedpostmanage/reportedpostmanage.component.html
@@ -18,7 +18,7 @@
                 <a routerLink='/consultpost' class="text-dark" style="text-decoration:none;"><p class="font">{{post.text_content}}</p></a>
             </div>
         <div class="mb-3 ">
-           <a routerLink='/consultpost'> <img  class="card-img-bottom " [src]= "post.media_content"/></a>
+           <a routerLink='/consultpost'> <img alt="consultPost"  class="card-img-bottom " [src]= "post.media_content"/></a>
         </div>
 
         <div class="flexy-2">
