--- a/code source/src/app/beta/beta.component.html
+++ b/code source/src/app/beta/beta.component.html
@@ -2,9 +2,9 @@
     <div class="card mb-3">
         <div class="card-body">
             <div class="flexy">
-                <a routerLink='/OtherPorfile'><img   class="img-fluid eclipse"  [src]="post.picture" alt="person/startup_img"></a>
+                <img  (click)="consult(post.idUser)" class="img-fluid eclipse"  [src]="post.picture" alt="person/startup_img">
                 <div class="flexy-1">
-                   <a style="color:black ; text-decoration:none; " routerLink='/OtherPorfile'><span  class="name">{{post.person_name}}</span></a>
+                   <span (click)="consult(post.idUser)" style="color:black ; text-decoration:none; " class="name">{{post.person_name}}</span>
                     <span class="person-description">{{post.person_status}}</span>
                     <span class="person-description">{{post.post_date}}</span>
                 </div> 
