--- a/code source/src/app/contactus/contactus.component.html
+++ b/code source/src/app/contactus/contactus.component.html
@@ -26,7 +26,7 @@
             </form>
         </div>
         <div class="col">
-            <img src="../../assets/rajel.png" class="float-end">
+            <img src="../../assets/rajel.png" class="float-end" alt="contactus">
         </div>
      </div>
 </div>
