--- a/code source/src/app/login-form/login-form.component.html
+++ b/code source/src/app/login-form/login-form.component.html
@@ -2,7 +2,7 @@
 <body>
     <app-headerlanding></app-headerlanding>
     <div class="container">
-    <div class="row">
+
     <div class="col offset-2">
         <p id="text1">Login with StartMatch</p></div>
         <form class="was-validated" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
@@ -27,7 +27,10 @@
                     <p style="color: rgb(209, 209, 209); display: inline;">No account ?</p>
                     <a routerLink='/signin' id="signUp"><p style="color: rgb(227, 109, 54); margin-left: 3px; margin-top: 10px; display: inline;">Sign Up</p></a>
                 </div>
-                </form>
-             </div> 
-             </div>
+                </form> </div>
+
+
+
+                
+                
 </body>
