--- a/code source/src/app/other-porfile/other-porfile.component.html
+++ b/code source/src/app/other-porfile/other-porfile.component.html
@@ -6,27 +6,37 @@
     <div class="container-fluid">
         <div class="row d-flex align-items-center"id="d2">
             <div class="offset-md-5 col-md-2 text-center"id="pdp2">
-                <img src="../../assets/images (2).jpg" style="box-shadow:rgb(71, 90, 106) 3px 3px 6px 0px;" height="75" width="81"  class="rounded-circle" >
+                <img src="data:image/jpeg;base64,{{userv.ppic}}" style="box-shadow:rgb(71, 90, 106) 3px 3px 6px 0px;" height="75" width="81"  class="rounded-circle" >
             </div>
         </div>
         <div class="row d-flex align-items-center" id="name">
             <div class="offset-md-4 col-md-4 text-center">
-                <h4>Najla BenAhmed</h4>
-            </div>
+                <ng-container *ngIf="userv.pfirst_name">
+                    <h4>
+                        {{ userv.pfirst_name }} {{ userv.plast_name }}
+                    </h4>
+                </ng-container>
+                <ng-container *ngIf="userv.sname">
+                    <h4>
+                        {{ userv.sname }}
+                    </h4>
+                </ng-container>
+        </div>
         </div>
         <div class="row d-flex align-items-center" id="bio">
             <div class="offset-md-4 col-md-4 text-center">
-                <p>
-                    computer science engineer
-                    istic 22-25 ssssssssss ssssssss ssss ssssssssssssss s
-                </p>
+                <div *ngIf="userv.bio"style="text-align: center;">
+                    {{userv.bio}}
+                </div>
                 <button type="click" id="report" class="btn btn-danger">Report profile</button>
 
             </div>
         </div>
         <div class="row mt-5">
             <div class="col-md-6 offset-md-3">
-            <app-beta></app-beta></div></div>
+                <ng-container *ngFor="let post of tab">
+                    <app-beta [post]="post"></app-beta>
+                  </ng-container></div></div>
         </div>
     </div>
 </body>
