--- a/code source/src/app/reported/reported.component.html
+++ b/code source/src/app/reported/reported.component.html
@@ -13,7 +13,7 @@
                   <ul class="list-group list-group-flush cus-bg" >
                     <li *ngFor="let profile of reported" class="list-group-item cus-bg">
                         <div class="row ">                        <div class="col-3 align-items">
-                           <img [src]="profile.image" (click)="consult(profile.id)" height="45" width="51" id="pdp" class="rounded-circle" >
+                           <img [src]="profile.image" (click)="consult(profile.id)" height="45" width="51" id="pdp" alt="photoprofil" class="rounded-circle" >
                       </div>
                         <div class="col-6 align-items">
                           <p (click)="consult(profile.id)" style="text-decoration: none; color: black;" style="margin-top: 11px;" id="profile-name">{{profile.name}}</p>
