--- a/code source/src/app/updatepost/updatepost.component.html
+++ b/code source/src/app/updatepost/updatepost.component.html
@@ -1,33 +1,36 @@
 <div class="container">
+    <app-header></app-header>
+    <form [formGroup]="updateForm">
     <div class="card mb-3">
         <div class="card-body">
             <div class="flexy">
-                <img  routerLink='/profile' class="img-fluid eclipse"  [src]="post.picture" alt="person/startup_img">
+                <img  routerLink='/profile' class="img-fluid eclipse"  src="data:image/jpeg;base64,{{user.ppic}}" alt="person/startup_img">
                 <div class="flexy-1">
-                    <span routerLink='/profile' class="name">{{post.person_name}}</span>
-                    <span class="person-description">{{post.person_status}}</span>
-                    <span class="person-description">{{post.post_date}}</span>
+                    <span routerLink='/profile' class="name">{{user.pfirst_name}} {{user.plast_name}}</span>
+                    <span class="person-description">{{user.field}}</span>
+                    <span class="person-description">{{hell.dateofcreation}}</span>
                 </div> 
             </div>
         </div>
        <!-- <span *ngIf="post.status==='founder'" class="badge badge-pill badge-warning status">{{post.status}}</span>
         <span *ngIf="post.status==='co-founder'" class="badge badge-pill badge-warning status1">{{post.status}}</span>-->
-        <span [ngClass]="{'status badge badge-pill badge-warning':post.status==='founder','status1 badge badge-pill badge-warning':post.status==='co-founder'}" >{{post.status}}</span>
+        <span [ngClass]="{'status badge badge-pill badge-warning':hell.status==='founder','status1 badge badge-pill badge-warning':hell.status==='co-founder'}" >{{hell.status}}</span>
         <div class="card-body pos">
             <div class="text_of_post col-12 mt-2">
-                <textarea name="content" id="content" class="form-control" rows="12">{{post.text_content}}</textarea>
+                <textarea name="content" id="content" class="form-control" rows="12" formControlName="text_value" [(ngModel)]="hell.textcontent" >{{this.hell.textcontent}}</textarea>
             <!-- <p class="font"><input type="text" id="content" class="form-control" name="content" [value]="post.text_content"></p> -->
             </div>
         <div class="mb-3 ">
-        <img  class="card-img-bottom " [src]= "post.media_content"/>
+        <img  class="card-img-bottom " [src]= "this.hell.mediacontent"/>
         </div>
 
         <div class="flexy-2">
-               <a routerLink="/consultpost"><button type="submit" class="btn btn-success">Save</button></a>
+               <a routerLink="/profile"><button type="submit" class="btn btn-success" (click)="savepost()">Save</button></a>
         </div>
          
        
        
     </div>
 </div>
+</form>
 </div>
