--- a/code source/src/app/consultpost/consultpost.component.html
+++ b/code source/src/app/consultpost/consultpost.component.html
@@ -4,9 +4,9 @@
     <br><br>
     <div class="col-md-6 offset-md-3">
         <div class="d-flex justify-content-center">
-        <app-beta></app-beta>
+        <app-beta [post]="post"></app-beta>
     </div>
     </div>
 </div>
-</body>
 <app-footer></app-footer>
+</body>
