--- a/code source/src/app/contactus2/contactus2.component.html
+++ b/code source/src/app/contactus2/contactus2.component.html
@@ -1,3 +1,4 @@
+<body>
 <div class="bg-image" 
      style="background-image: url('../../assets/bg_land.png');height: 100vh">
      <app-header></app-header>
@@ -29,4 +30,4 @@
             <img src="../../assets/rajel.png" class="float-end" alt="contact">
         </div>
      </div>
-</div>
+</div></body>
