--- a/code source/src/app/filtrage/filtrage.component.html
+++ b/code source/src/app/filtrage/filtrage.component.html
@@ -1,3 +1,4 @@
+<body>
 <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
 <form>
 <div class=" d-flex justify-content-center">
@@ -14,4 +15,4 @@
 </div>
 </div>
 </form>
-
+</body>
