--- a/code source/src/app/header/header.component.html
+++ b/code source/src/app/header/header.component.html
@@ -1,3 +1,4 @@
+<body>
 <link href="./header.component.css" rel="stylesheet">
 <div class="container-fluid py-3" id="d1">
     <div class="row d-flex align-items-center">
@@ -22,5 +23,5 @@
             </a>
         </div>
     </div>
-</div>
+</div></body>
 
