--- a/code source/src/app/headernews/headernews.component.html
+++ b/code source/src/app/headernews/headernews.component.html
@@ -1,3 +1,4 @@
+<body>
 <link href="./headernews.component.css" rel="stylesheet">
 <div class="container-fluid py-3" id="d1">
     <div class="row d-flex align-items-center ">
@@ -23,3 +24,4 @@
         </div>
     </div>
 </div>
+</body>
