--- a/code source/src/app/profile-search/profile-search.component.html
+++ b/code source/src/app/profile-search/profile-search.component.html
@@ -1,3 +1,4 @@
+<body>
 <div class="container">
     <div class=" col-sm-12">
         <div class="profile-container">
@@ -9,3 +10,4 @@
                 <br/><span id="user-data">CEO of Privacera</span>
                 <div class="line" style="border-bottom: 1px solid rgb(205, 205, 205);width: 350px;"></div>
                 </div></div></div></div> </div>
+            </body>
