--- a/code source/src/app/updatepost/updatepost.component.css
+++ b/code source/src/app/updatepost/updatepost.component.css
@@ -1,3 +1,10 @@
+body{
+    background-image: url("../../assets/ba.png");
+    background-repeat: no-repeat; 
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+}
 .eclipse{
     width: 75px; 
     height: 75px; 
