--- a/code source/src/app/updatepost/updatepost.component.html
+++ b/code source/src/app/updatepost/updatepost.component.html
@@ -1,5 +1,10 @@
+
+
+<body>
+<div class="container-fluid">
+<app-header></app-header></div>
 <div class="container">
-    <app-header></app-header>
+    
     <form [formGroup]="updateForm">
     <div class="card mb-3">
         <div class="card-body">
@@ -34,3 +39,5 @@
 </div>
 </form>
 </div>
+    
+</body>
