--- a/code source/src/app/consultreportedprofiil/consultreportedprofiil.component.html
+++ b/code source/src/app/consultreportedprofiil/consultreportedprofiil.component.html
@@ -1,6 +1,4 @@
-<body>
-    
-
+    <body>
     <div class="container-fluid">
         <app-headeradmin></app-headeradmin>
         <div class="container-fluid">
@@ -37,12 +35,14 @@
             <div class="row mt-5">
                 <div class="col-md-6 offset-md-3">
                     <div class="row">
+                        <ng-container *ngIf="tab">
                         <ng-container *ngFor="let post of tab">
                             <app-postmanage [post]="post"></app-postmanage>
                           </ng-container>
+                        </ng-container>
                     </div>
                 </div></div>
             </div>
         </div>
-    </body>
+</body>
     
