--- a/code source/src/app/contactus/contactus.component.html
+++ b/code source/src/app/contactus/contactus.component.html
@@ -1,3 +1,4 @@
+<body>  
 <div class="bg-image" 
      style="background-image: url('../../assets/bg_land.png');height: 100vh">
      <app-headerlanding2></app-headerlanding2>
@@ -30,3 +31,4 @@
         </div>
      </div>
 </div>
+</body>
