--- a/code source/src/app/headerlanding/headerlanding.component.html
+++ b/code source/src/app/headerlanding/headerlanding.component.html
@@ -1,3 +1,6 @@
+<body>
+  
+
 <div class="container-fluid  ">
     
     <div class="row d-flex align-items-center" id="d1">
@@ -28,3 +31,4 @@
         </div>
     </div>
 </div>
+</body>
