--- a/code source/src/app/other-porfile/other-porfile.component.html
+++ b/code source/src/app/other-porfile/other-porfile.component.html
@@ -1,12 +1,10 @@
 <body>
-    
-
 <div class="container-fluid">
     <app-header></app-header>
     <div class="container-fluid">
         <div class="row d-flex align-items-center"id="d2">
             <div class="offset-md-5 col-md-2 text-center"id="pdp2">
-                <img src="data:image/jpeg;base64,{{userv.ppic}}" style="box-shadow:rgb(71, 90, 106) 3px 3px 6px 0px;" height="75" width="81"  class="rounded-circle" >
+                <img alt="pdp" src="data:image/jpeg;base64,{{userv.ppic}}" style="box-shadow:rgb(71, 90, 106) 3px 3px 6px 0px;" height="75" width="81"  class="rounded-circle" >
             </div>
         </div>
         <div class="row d-flex align-items-center" id="name">
