--- a/code source/src/app/post-aff/post-aff.component.html
+++ b/code source/src/app/post-aff/post-aff.component.html
@@ -1,3 +1,4 @@
+<body>
 <div class="container">
     <div class="row">
     <div class="col offset-4">
@@ -25,3 +26,5 @@
     </div>
 </div>
 </div>
+</div>
+</body>
