--- a/code source/src/app/postmanage/postmanage.component.html
+++ b/code source/src/app/postmanage/postmanage.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="container">
     <div class="card mb-3">
         <div class="card-body">
@@ -23,10 +25,14 @@
 
         <div class="flexy-2">
             <a [routerLink]="['/updatepost',post.idpost]"><button type="button" class="btn btn-success" >update</button></a>
-             <button type="button"  class="btn btn-danger">delete</button>
+             <button  type="click"(click)="deletePost()" class="btn btn-danger">delete</button>
      </div>
          
        
        
     </div>
 </div></div>
+    
+
+
+
