--- a/code source/src/app/reported/reported.component.html
+++ b/code source/src/app/reported/reported.component.html
@@ -1,4 +1,4 @@
-<body>
+
     <div class="container-fluid">
 
 <div class="row">
@@ -28,4 +28,4 @@
  -->          </div>
     </div>
 </div>
-    </div></body>
+    </div>
