--- a/code source/src/app/search/search.component.html
+++ b/code source/src/app/search/search.component.html
@@ -1,3 +1,5 @@
+<body>
+
 <div class="container-fluid" id="bg">
   <app-header></app-header>
 <br>
@@ -38,3 +40,5 @@
       </div>
   </div>
   </div>
+  
+</body>
